hphp/hack/test/typecheck/math_new_code/math_ops.php.exp
File "math_ops.php", line 20, characters 3-6:
Typing error (Typing[4429])
  File "math_ops.php", line 20, characters 3-10:
  Expected `num` because this is used in an arithmetic operation
  File "math_ops.php", line 20, characters 3-6:
  But got `bool`
File "math_ops.php", line 21, characters 3-7:
Typing error (Typing[4429])
  File "math_ops.php", line 21, characters 3-15:
  Expected `num` because this is used in an arithmetic operation
  File "math_ops.php", line 21, characters 3-7:
  But got `string`
File "math_ops.php", line 21, characters 11-15:
Typing error (Typing[4429])
  File "math_ops.php", line 21, characters 3-15:
  Expected `num` because this is used in an arithmetic operation
  File "math_ops.php", line 21, characters 11-15:
  But got `string`
File "math_ops.php", line 22, characters 3-7:
Typing error (Typing[4429])
  File "math_ops.php", line 22, characters 3-12:
  Expected `num` because this is used in an arithmetic operation
  File "math_ops.php", line 22, characters 3-7:
  But got `string`
File "math_ops.php", line 22, characters 11-12:
Typing error (Typing[4429])
  File "math_ops.php", line 22, characters 3-12:
  Expected `num` because this is used in an arithmetic operation
  File "math_ops.php", line 19, characters 35-40:
  But got `string`
File "math_ops.php", line 23, characters 3-4:
Typing error (Typing[4429])
  File "math_ops.php", line 23, characters 3-6:
  Expected `num` because this is used in an arithmetic operation
  File "math_ops.php", line 19, characters 27-29:
  But got `Foo`
File "math_ops.php", line 24, characters 8-9:
Typing error (Typing[4429])
  File "math_ops.php", line 24, characters 3-9:
  Expected `num` because this is used in an arithmetic operation
  File "math_ops.php", line 19, characters 27-29:
  But got `Foo`
File "math_ops.php", line 25, characters 3-7:
Typing error (Typing[4429])
  File "math_ops.php", line 25, characters 3-11:
  Expected `int` because this is used in an arithmetic operation
  File "math_ops.php", line 25, characters 3-7:
  But got `string`
File "math_ops.php", line 26, characters 9-10:
Typing error (Typing[4429])
  File "math_ops.php", line 26, characters 3-10:
  Expected `num` because this is used in an arithmetic operation
  File "math_ops.php", line 19, characters 35-40:
  But got `string`
File "math_ops.php", line 27, characters 3-4:
Typing error (Typing[4429])
  File "math_ops.php", line 27, characters 3-10:
  Expected `num` because this is used in an arithmetic operation
  File "math_ops.php", line 19, characters 35-40:
  But got `string`
File "math_ops.php", line 28, characters 3-4:
Typing error (Typing[4429])
  File "math_ops.php", line 28, characters 3-9:
  Expected `num` because this is used in an arithmetic operation
  File "math_ops.php", line 19, characters 27-29:
  But got `Foo`
File "math_ops.php", line 30, characters 3-4:
Typing error (Typing[4429])
  File "math_ops.php", line 30, characters 3-10:
  Expected `int` because this is used in an arithmetic operation
  File "math_ops.php", line 29, characters 3-10:
  But got `num` because it is the result of a division `/`
